--- a/docker-publish.yml
+++ b/docker-publish.yml
@@ -1,8 +1,8 @@
 name: Build and Push Docker Image
 
-on:
+于:
   push:
-    branches:
+    分支:
       - main   # 当 main 分支有提交时触发
   workflow_dispatch: # 允许手动触发
 
@@ -27,7 +27,7 @@ jobs:
       # 3️⃣ 设置 Docker 镜像名称
       - name: Set image name
         run: |
-          echo "IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/node-extractor:latest" >> $GITHUB_ENV
+          echo "IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/edgegojd:latest" >> $GITHUB_ENV
 
       # 4️⃣ 构建 Docker 镜像
       - name: Build Docker image
