--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,20 +3,21 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main   # 当 main 分支有提交时触发
-  workflow_dispatch: # 允许手动触发
+      - main
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  packages: write
 
 jobs:
   build-and-push:
-    name: Build and Push Docker Image to GHCR
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ 检出仓库代码
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2️⃣ 登录 GHCR
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -24,15 +25,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # 3️⃣ 设置 Docker 镜像名称
       - name: Set image name
         run: |
-          echo "IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/edgegojd:latest" >> $GITHUB_ENV
+          echo "IMAGE_NAME=ghcr.io/${{ github.actor }}/edgegojd:latest" >> $GITHUB_ENV
 
-      # 4️⃣ 构建 Docker 镜像
       - name: Build Docker image
         run: docker build -t $IMAGE_NAME .
 
-      # 5️⃣ 推送 Docker 镜像到 GHCR
       - name: Push Docker image
         run: docker push $IMAGE_NAME
