--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,18 +6,22 @@ on:
       - main
   workflow_dispatch:
 
+# ⭐ 必须写，否则 GHCR 推送会被拒绝
 permissions:
   contents: read
   packages: write
 
 jobs:
   build-and-push:
+    name: Build and Push Docker Image to GHCR (Personal)
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ 检出代码
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # 2️⃣ 登录 GHCR（使用内置 GITHUB_TOKEN）
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -25,12 +29,15 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      # 3️⃣ 设置镜像名（个人 GHCR）
       - name: Set image name
         run: |
           echo "IMAGE_NAME=ghcr.io/${{ github.actor }}/edgegojd:latest" >> $GITHUB_ENV
 
+      # 4️⃣ 构建镜像
       - name: Build Docker image
         run: docker build -t $IMAGE_NAME .
 
+      # 5️⃣ 推送镜像
       - name: Push Docker image
         run: docker push $IMAGE_NAME
