--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "edgegojd",
-  "version": "1.0.0",
+  "name": "sub-node",
   "type": "module",
+  "version": "1.0.0",
   "dependencies": {
-    "axios": "^1.6.8",
-    "js-yaml": "^4.1.0"
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2"
   }
 }
