--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "sub-node",
   "type": "module",
-  "version": "1.0.0",
   "dependencies": {
     "express": "^4.19.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "js-yaml": "^4.1.0"
   }
 }
