--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "dependencies": {
     "express": "^4.19.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "js-yaml": "^4.1.0"
   }
 }
