--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
-  "name": "singbox-sub",
+  "name": "singbox-sub"，
+  "version": "1.0.0",
+  "description": "Unified sing-box subscription service",
+  "main": "server.js",
   "type": "module",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "express": "^4.19.2",
-    "node-fetch": "^3.3.2",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.1",
     "js-yaml": "^4.1.0"
   }
 }
